TEST | debut test creation sortie + modif fixtures

--- a/templates/sortie/show.html.twig
+++ b/templates/sortie/show.html.twig
@@ -150,7 +150,7 @@
                         Description
                     </h2>
                     <div class="bg-blue-50 border border-blue-200 rounded-lg p-4">
-                        <div class="text-sm text-gray-800 whitespace-pre-line">{{ sortie.description }}</div>
+                        <div class="text-sm text-gray-800 whitespace-pre-line sortie-description">{{ sortie.description }}</div>
                     </div>
                 </div>
                 {% endif %}
