--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -47,6 +47,10 @@
                     </div>
                 </div>
             </div>
+            <a href="{{ path('app_site_list') }}" class="relative text-gray-700 hover:text-blue-600 font-medium transition-colors duration-200 group">
+                <span class="relative z-10">Gestion des sites</span>
+                <div class="absolute inset-0 bg-gradient-to-r from-blue-500 to-blue-600 rounded-md opacity-0 group-hover:opacity-10 transition-opacity duration-200"></div>
+            </a>
             {% endif %}
 
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
@@ -135,6 +139,12 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12"></path>
                         </svg>
                         Importer des utilisateurs
+                    </a>
+                    <a href="{{ path('app_site_list') }}" class="flex items-center text-gray-700 hover:text-blue-600 hover:bg-blue-50 px-3 py-3 rounded-lg transition-all duration-200">
+                        <svg class="w-5 h-5 mr-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m-1 4h1m5-4h1m-1 4h1m-1-4h1m-1-8h1"></path>
+                        </svg>
+                        Gestion des sites
                     </a>
                 </div>
                 {% endif %}
