--- a/templates/profil/edit_profil.html.twig
+++ b/templates/profil/edit_profil.html.twig
@@ -49,7 +49,7 @@
                                      alt="Photo actuelle"
                                      class="w-20 h-20 rounded-full object-cover shadow-lg border-2 border-white">
                             {% else %}
-                                <img src="{{ asset('uploads/photos/Avatar.png') }}"
+                                <img src="{{ asset('images/Avatar.png') }}"
                                      alt="Avatar par défaut"
                                      class="w-20 h-20 rounded-full object-cover shadow-lg border-2 border-white">
                             {% endif %}
@@ -82,7 +82,7 @@
                                      class="w-20 h-20 rounded-full object-cover shadow-lg border-2 border-white"
                                      id="preview-image">
                             {% else %}
-                                <img src="{{ asset('uploads/photos/Avatar.png') }}"
+                                <img src="{{ asset('images/Avatar.png') }}"
                                      alt="Avatar par défaut"
                                      class="w-20 h-20 rounded-full object-cover shadow-lg border-2 border-white"
                                      id="preview-image">
