--- a/templates/profil/view_profil.html.twig
+++ b/templates/profil/view_profil.html.twig
@@ -42,7 +42,7 @@
                                      class="w-20 h-20 rounded-full object-cover shadow-lg border-2 border-white">
                             {% else %}
                                 <div class="w-20 h-20 rounded-full bg-gradient-to-r from-blue-500 to-indigo-600 flex items-center justify-center text-white text-3xl font-bold shadow-lg">
-                                    <img src="{{ asset('uploads/photos/Avatar.png') }}"
+                                    <img src="{{ asset('images/Avatar.png') }}"
                                          alt="Photo de profil"
                                          class="w-20 h-20 rounded-full object-cover shadow-lg border-2 border-white">
                                 </div>
