--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -66,7 +66,7 @@
                     <!-- Photo de profil + pseudo -->
                     <a href="{{ path('view_profil') }}" class="flex items-center bg-white bg-opacity-70 backdrop-blur-sm rounded-full pl-2 pr-4 py-2 shadow-sm border border-blue-100 hover:bg-blue-50 hover:shadow-md transition-all duration-200 relative z-10">
                         <img
-                                src="{{ app.user.photoFilename ? asset('uploads/photos/' ~ app.user.photoFilename) : asset('uploads/photos/Avatar.png') }}"
+                                src="{{ app.user.photoFilename ? asset('uploads/photos/' ~ app.user.photoFilename) : asset('images/Avatar.png') }}"
                                 alt="Photo de profil"
                                 class="w-8 h-8 rounded-full object-cover border border-blue-200 mr-2"
                         >
