Ajout du dark mode + correction de quelques bugs

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
         {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </head>
-<body>
+<body class="bg-gray-100 dark:bg-gray-900">
 {% include 'partials/_navbar.html.twig' %}
 {% block body %}{% endblock %}
 </body>
