--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,4 +1,18 @@
 @import "tailwindcss";
 @import "./autocomplete.css";
 
+@variant dark (&:where(.dark, .dark *));
+
 @source not "../../public";
+
+.theme-switcher-input:checked ~ .dot {
+    transform: translateX(100%);
+}
+
+.dark .dot {
+    background-color: #a0aec0; /* gray-400 */
+}
+
+.dark .theme-switcher-input:checked ~ .dot {
+    background-color: #4a5568; /* gray-600 */
+}
