--- a/templates/emails/_base_email.html.twig
+++ b/templates/emails/_base_email.html.twig
@@ -41,28 +41,6 @@
             line-height: 1.6;
             color: #4a5568;
         }
-        .button-container {
-            text-align: center;
-            padding-top: 20px;
-        }
-        .button {
-            display: inline-block;
-            padding: 12px 24px;
-            font-size: 16px;
-            font-weight: 600;
-            color: #ffffff;
-            text-decoration: none;
-            border-radius: 6px;
-            transition: all 0.3s;
-        }
-        .button-green {
-            background-color: #28a745; /* Fallback */
-            background-image: linear-gradient(to right, #22c55e, #16a34a);
-        }
-        .button-blue {
-            background-color: #007bff; /* Fallback */
-            background-image: linear-gradient(to right, #3b82f6, #2563eb);
-        }
         .footer {
             text-align: center;
             padding-top: 20px;
@@ -74,7 +52,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="{{ absolute_url(asset('images/logo1.png')) }}" alt="Sortir.com Logo">
+            <img src="{{ absolute_url(asset('images/logo-light.png')) }}" alt="Sortir.com Logo">
         </div>
         <div class="content">
             {% block email_content %}{% endblock %}
